correction scrollbar responsive

--- a/css/style.css
+++ b/css/style.css
@@ -112,13 +112,13 @@ footer a:hover {
   color: #9356DC;
 }
 footer #logo_footer {
-  width: 100%;
   font-family: Shrikhand;
   font-size: 1.5em;
   margin: 30px 0px 30px 20px;
 }
 @media screen and (min-width: 1400px) {
   footer #logo_footer {
+    width: 80%;
     font-size: 2.3em;
     margin: 25px 0px 0px 45%;
   }
