--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -27,11 +27,11 @@ footer {
         color: $primary-color;
     }
     #logo_footer {
-        width: 100%;
         font-family: Shrikhand;
         font-size: 1.5em;
         margin: 30px 0px 30px 20px;
         @include desktop {
+            width: 80%;
             font-size: 2.3em;
             margin: 25px 0px 0px 45%;
         }
